Update azure-pipelines-upgrate-versions.yml for Azure Pipelines

--- a/azure-pipelines/azure-pipelines-upgrate-versions.yml
+++ b/azure-pipelines/azure-pipelines-upgrate-versions.yml
@@ -34,6 +34,7 @@ stages:
         downloadPath: '$(System.ArtifactsDirectory)'
     - script: |
         echo "test"
+        find $(System.ArtifactsDirectory)
         echo "ArtifactsDirectory=$(System.ArtifactsDirectory)"
       displayName: "Upgrade Versions"
     
