--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -32,7 +32,7 @@ jobs:
           mv $(System.DefaultWorkingDirectory)/target/versions $(System.DefaultWorkingDirectory)/target/_versions/versions.$(BUILD_NAME)
         displayName: "Move version files"
       - publish: $(System.DefaultWorkingDirectory)/target/_versions
-        artifact: 'sonic-buildimage.versions'
+        artifact: 'sonic-buildimage.versions.$(BUILD_NAME)'
         displayName: "Archive sonic versions"
       - script: |
           echo "PostStep 2"
