--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -24,6 +24,10 @@ jobs:
           find target
         displayName: 'Fake versions'
     postSteps:
+      - script: |
+          mkdir -p target/all_versions
+          ln -s target/versions target/all_versions/$(BUILD_NAME)
+        displayName: "Link versions"
       - publish: $(System.DefaultWorkingDirectory)/target
         artifact: 'sonic-buildimage.$(BUILD_NAME)'
         displayName: "Archive sonic image"
