Update azure-pipelines-upgrate-versions.yml for Azure Pipelines

--- a/azure-pipelines/azure-pipelines-upgrate-versions.yml
+++ b/azure-pipelines/azure-pipelines-upgrate-versions.yml
@@ -26,13 +26,19 @@ stages:
   jobs:
   - job: UpgradeVersions
     steps:
+    - script: |
+        # Clean up
+        [ -d target ] && sudo rm -rf target
+        [ -d fsroot ] && sudo rm -rf fsroot
+    - checkout: self
+      #submodules: recursive
+      displayName: 'Checkout code'
     - download: current
       patterns: '**'
     - script: |
         echo "test"
         ls -l .
         find target
-        find $(System.ArtifactsDirectory)
-        echo "ArtifactsDirectory=$(System.ArtifactsDirectory)"
+        echo "ArtifactsDirectory=$(System.Workspace)"
       displayName: "Upgrade Versions"
     
