Update azure-pipelines-upgrate-versions.yml for Azure Pipelines

--- a/azure-pipelines/azure-pipelines-upgrate-versions.yml
+++ b/azure-pipelines/azure-pipelines-upgrate-versions.yml
@@ -39,7 +39,7 @@ stages:
       patterns: '**'
     - script: |
         echo "test"
-        ls -l .
+        ls -l $(Pipeline.Workspace)
         echo "ArtifactsDirectory=$(Pipeline.Workspace)"
       displayName: "Upgrade Versions"
     
