--- a/azure-pipelines/azure-pipelines-upgrate-versions.yml
+++ b/azure-pipelines/azure-pipelines-upgrate-versions.yml
@@ -36,7 +36,7 @@ stages:
       #submodules: recursive
       displayName: 'Checkout code'
     - download: current
-      patterns: 'sonic-buildimage.vs/**'
+      patterns: '*/versions/**'
     - script: |
         echo "test"
         find $(Pipeline.Workspace)/sonic-buildimage.*
