--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -1,53 +1,59 @@
 parameters:
 - name: 'buildOptions'
   type: string
-  default: ''
+  default: 'SONIC_CONFIG_BUILD_JOBS=4 INSTALL_DEBUG_TOOLS=y'
 jobs:
 - template: azure-pipelines-comon-build.yml 
   parameters:
     preSteps:
       - script: |
-          # Clean up
           [ -d target ] && sudo rm -rf target
           [ -d fsroot ] && sudo rm -rf fsroot
-          # Make configure
-          OPTIONS="${{ parameters.buildOptions }} PLATFORM=$BUILD_NAME"
-          echo "make $OPTIONS configure"
-        displayName: 'Pre Step'
+        displayName: 'Init'
       - checkout: self
-        #submodules: recursive
+        submodules: recursive
         displayName: 'Checkout code'
       - script: |
-          mkdir -p target/versions
-          echo "test" > target/results-1.log
-          echo "11" > target/versions/versions-2.log
-          find target
-        displayName: 'Fake versions'
+          OPTIONS="${{ parameters.buildOptions }} PLATFORM=$BUILD_NAME"
+          echo "make $OPTIONS configure"
+        displayName: 'Make configure'
     postSteps:
       - publish: $(System.DefaultWorkingDirectory)/target
         artifact: 'sonic-buildimage.$(BUILD_NAME)'
         displayName: "Archive sonic image"
-      - script: |
-          echo "PostStep 2"
-        displayName: "PostStep 2"
     builds:
       - name: vs
         script: |
-          echo "Run script"
-        buildSteps:
-        - script: |
-            echo "BuildStep 1"
-          displayName: "BuildStep 1"
-        - script: |
-            echo "BuildStep 2"
-          displayName: "BuildStep 2"
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS ENABLE_SYNCD_RPC=y target/sonic-vs.bin
+          make $OPTIONS target/docker-sonic-vs.gz
       - name: broadcom
         script: |
-          echo "Run script"
-        buildSteps:
-        - script: |
-            echo "BuildStep 1"
-          displayName: "BuildStep 1"
-        - script: |
-            echo "BuildStep 2"
-          displayName: "BuildStep 2"
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-aboot-broadcom.swi
+      - name: barefoot
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-barefoot.bin target/sonic-aboot-barefoot.swi
+      - name: centec
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-centec.bin 
+          make $OPTIONS ENABLE_SYNCD_RPC=y target/docker-syncd-centec-rpc.gz
+      - name: innovium
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-innovium.bin
+      - name: mellanox
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-mellanox.bin
+          make $OPTIONS ENABLE_SYNCD_RPC=y target/docker-syncd-mlnx-rpc.gz target/docker-ptf-mlnx.gz
+      - name: innovium
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-innovium.bin
+      - name: nephos
+        script: |
+          OPTIONS="${{ parameters.buildOptions }}"
+          make $OPTIONS target/sonic-nephos.bin
