--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -9,6 +9,7 @@ jobs:
       - script: |
           [ -d target ] && sudo rm -rf target
           [ -d fsroot ] && sudo rm -rf fsroot
+          exit 0
         displayName: 'Init'
       - checkout: self
         submodules: recursive
