--- a/azure-pipelines/azure-pipelines-comon-build.yml
+++ b/azure-pipelines/azure-pipelines-comon-build.yml
@@ -1,4 +1,7 @@
 parameters:
+- name: 'buildNames'
+  type: object
+  default: ''
 - name: 'preSteps'
   type: stepList
   default: []
@@ -16,16 +19,17 @@ parameters:
   default: 1440
 jobs:
 - ${{ each build in parameters.builds }}:
-  - job: ${{ format('Build_{0}', build.name) }}
-    timeoutInMinutes: ${{ parameters.timeoutInMinutes }}
-    variables:
-      BUILD_NAME: ${{ build.name }}
-    steps:
-    - ${{ parameters.preSteps }}
-    - ${{ if ne(build.script, '') }}:
-      - script: |
-          ${{ build.script }}
-        displayName: 'BuildScript'
-    - ${{ if ne(build.buildSteps, '') }}:
-      - ${{ build.buildSteps }}
-    - ${{ parameters.postSteps }}
+  - ${{ if or(eq(parameters.buildNames, ''), containsValue(parameters.buildNames, build.name)) }}
+    - job: ${{ format('Build_{0}', build.name) }}
+      timeoutInMinutes: ${{ parameters.timeoutInMinutes }}
+      variables:
+        BUILD_NAME: ${{ build.name }}
+      steps:
+      - ${{ parameters.preSteps }}
+      - ${{ if ne(build.script, '') }}:
+        - script: |
+            ${{ build.script }}
+          displayName: 'BuildScript'
+      - ${{ if ne(build.buildSteps, '') }}:
+        - ${{ build.buildSteps }}
+      - ${{ parameters.postSteps }}
