--- a/azure-pipelines/azure-pipelines-build.yml
+++ b/azure-pipelines/azure-pipelines-build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: mellanox
         script: |
           make ${{ parameters.buildOptions }} target/sonic-mellanox.bin
-          make ${{ parameters.buildOptions }} INSTALL_DEBUG_TOOLS= ENABLE_SYNCD_RPC=y target/docker-syncd-mlnx-rpc.gz target/docker-ptf-mlnx.gz
+          make ${{ parameters.buildOptions }} INSTALL_DEBUG_TOOLS= ENABLE_SYNCD_RPC=y target/docker-syncd-mlnx-rpc.gz
       - name: nephos
         script: |
           make ${{ parameters.buildOptions }} target/sonic-nephos.bin
