--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
     displayName: "broadcom"
     timeoutInMinutes: 600
     steps:
-    - scripts: |
+    - script: |
         sudo rm -rf fsroot
       displayName: 'Cleanup'
     - checkout: self
@@ -58,7 +58,7 @@ stages:
     displayName: "mellanox"
     timeoutInMinutes: 600
     steps:
-    - scripts: |
+    - script: |
         sudo rm -rf fsroot
       displayName: 'Cleanup'
     - checkout: self
@@ -87,7 +87,7 @@ stages:
     displayName: "kvm"
     timeoutInMinutes: 600
     steps:
-    - scripts: |
+    - script: |
         sudo rm -rf fsroot
       displayName: 'Cleanup'
     - checkout: self
