--- a/azure-pipelines/templates/debian-mirror-init.yml
+++ b/azure-pipelines/templates/debian-mirror-init.yml
@@ -1,17 +1,17 @@
 steps:
+- bash: |
+    MIRROR_VERSION=$(date +%Y%m%d%H%M%S-%N)
+    echo "MIRROR_VERSION=$MIRROR_VERSION"
+    echo "##vso[task.setvariable variable=MirrorVersion;isOutput=true]$MIRROR_VERSION"
+  name: InitStep
+  displayName: "Init Step"
 - template: ../templates/debian-mirror-init-agent.yml
 - template: ../templates/debian-mirror-init-storage.yml
   parameters:
     nfsMountPoint: '/$(NFSName)'
 - bash: |
-    MIRROR_VERSION=$(date +%Y%m%d%H%M%S-%N)
-    echo "The the next Mirror version is $MIRROR_VERSION"
-    echo "##vso[task.setvariable variable=MirrorVersion;isOutput=true]$MIRROR_VERSION"
-  name: InitStep
-- bash: |
     set -e
     az login -u $(ApplicationId) --service-principal --tenant $(AzureTenant) -p "$ApplicationKey"
-    # Expect the priority of the replica origin is 4
     resource_group=$(CDNResourceGroup)
     endpoint_name=$(CDNEndpointName)
     cdn_profile=$(CDNProfile)
