--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -16,6 +16,7 @@ stages:
       - script: |
           echo "prestep1"
           echo "JobVar1=$JobVar1"
+          echo "JobVar2=$JobVar2"
           echo "ScriptEnv1=$ScriptEnv1"
           echo "MIRROR_NAME=$MIRROR_NAME"
           echo "MIRROR_FILESYSTEM=$MIRROR_FILESYSTEM"
@@ -32,6 +33,7 @@ stages:
       - name: jessie
         script: |
           echo "ScriptEnv1=$ScriptEnv1"
+          echo "JobVar2=$JobVar2"
         variables:
           MIRROR_NAME: jessie
           MIRROR_FILESYSTEM: debian
