--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -20,6 +20,7 @@ stages:
       - script: |
           echo "prestep1"
           echo "JobVar1=$JobVar1"
+          echo "JOB_NAME=$JOB_NAME"
           echo "TestNAME=$TestNAME"
           echo "ScriptEnv1=$ScriptEnv1"
           echo "MIRROR_NAME=$MIRROR_NAME"
