--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -53,3 +53,35 @@ stages:
           MIRROR_DISTRIBUTIONS: 'stretch,stretch-updates,stretch-backports'
           MIRROR_COMPONENTS: 'contrib,non-free,main'
           MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
+      - name: buster
+        variables:
+          MIRROR_NAME: buster
+          MIRROR_FILESYSTEM: debian
+          MIRROR_URL: 'http://deb.debian.org/debian'
+          MIRROR_DISTRIBUTIONS: 'buster,buster-updates,buster-backports'
+          MIRROR_COMPONENTS: 'contrib,non-free,main'
+          MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
+      - name: jessie-security
+        variables:
+          MIRROR_NAME: debian-security
+          MIRROR_FILESYSTEM: debian
+          MIRROR_URL: 'http://security.debian.org/debian-security'
+          MIRROR_DISTRIBUTIONS: 'jessie/updates'
+          MIRROR_COMPONENTS: 'contrib,non-free,main'
+          MIRROR_ARICHTECTURES: 'amd64,armhf'
+      - name: stretch-security
+        variables:
+          MIRROR_NAME: stretch-security
+          MIRROR_FILESYSTEM: debian-security
+          MIRROR_URL: 'http://security.debian.org/debian-security'
+          MIRROR_DISTRIBUTIONS: 'stretch/updates'
+          MIRROR_COMPONENTS: 'contrib,non-free,main'
+          MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
+      - name: buster-security
+        variables:
+          MIRROR_NAME: buster-security
+          MIRROR_FILESYSTEM: debian-security
+          MIRROR_URL: 'http://security.debian.org/debian-security'
+          MIRROR_DISTRIBUTIONS: 'buster/updates'
+          MIRROR_COMPONENTS: 'contrib,non-free,main'
+          MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
