--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -61,7 +61,7 @@ stages:
           MIRROR_DISTRIBUTIONS: 'buster,buster-updates,buster-backports'
           MIRROR_COMPONENTS: 'contrib,non-free,main'
           MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
-      - name: jessie-security
+      - name: jessie_security
         variables:
           MIRROR_NAME: debian-security
           MIRROR_FILESYSTEM: debian
@@ -69,7 +69,7 @@ stages:
           MIRROR_DISTRIBUTIONS: 'jessie/updates'
           MIRROR_COMPONENTS: 'contrib,non-free,main'
           MIRROR_ARICHTECTURES: 'amd64,armhf'
-      - name: stretch-security
+      - name: stretch_security
         variables:
           MIRROR_NAME: stretch-security
           MIRROR_FILESYSTEM: debian-security
@@ -77,7 +77,7 @@ stages:
           MIRROR_DISTRIBUTIONS: 'stretch/updates'
           MIRROR_COMPONENTS: 'contrib,non-free,main'
           MIRROR_ARICHTECTURES: 'amd64,armhf,arm64'
-      - name: buster-security
+      - name: buster_security
         variables:
           MIRROR_NAME: buster-security
           MIRROR_FILESYSTEM: debian-security
