--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -12,7 +12,7 @@ variables:
 - group: Debian-Mirror-Common
 - template: debian-mirror-variables.yml
   parameters:
-    publishTo: $(publishTo)
+    publishTo: $(PublishTo)
 
 stages:
 - stage: Build
