--- a/azure-pipelines/templates/debian-mirror-variables.yml
+++ b/azure-pipelines/templates/debian-mirror-variables.yml
@@ -5,7 +5,7 @@ parameters:
   - uswest2
   - useast
 variables:
-- ${{ if eq(parameters.publishTo, 'uswest2') }}
+- ${{ if eq(parameters.publishTo, 'uswest2') }}:
   - group: SONiC-Mirror-US-West2-1
   - name: StorageAccount
     value: 'sonicstoragepublic0'
@@ -15,7 +15,7 @@ variables:
     value: 'sonicstoragepublic1'
   - name: StorageAccountReplicaSasToken
     value: $(sonicstoragepublic1-SasToken)
-- ${{ if eq(parameters.publishTo, 'useast') }}
+- ${{ if eq(parameters.publishTo, 'useast') }}:
   - group: SONiC-Mirror-US-East-1
   - name: StorageAccount
     value: 'sonicstoragepublic2'
