Update test.yml for Azure Pipelines

--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -10,9 +10,11 @@ pool: $(AGENT_POOL)
 variables:
 - group: SONiC-Azure-Key-Vault
 - group: Debian-Mirror-Common
+- name: PUBLISH_TO
+  value: $(PUBLISH_TO)
 - template: ../templates/debian-mirror-variables.yml
   parameters:
-    publishTo: '$(PUBLISH_TO)'
+    publishTo: '$(variables.PUBLISH_TO)'
 
 stages:
 - stage: Build
