Update test.yml for Azure Pipelines

--- a/azure-pipelines/mirrors/test.yml
+++ b/azure-pipelines/mirrors/test.yml
@@ -11,7 +11,7 @@ variables:
 - group: SONiC-Azure-Key-Vault
 - group: Debian-Mirror-Common
 - name: PUBLISH_TO
-  value: $(PUBLISH_TO)
+  value: 'useast'
 - template: ../templates/debian-mirror-variables.yml
   parameters:
     publishTo: '$(variables.PUBLISH_TO)'
